shiny-server 1.5.13
--------------------------------------------------------------------------------

* Upgrade dependencies to latest versions.

shiny-server 1.5.12
--------------------------------------------------------------------------------

* Upgrade Node.js to 10.15.3.

shiny-server 1.5.11
--------------------------------------------------------------------------------

(No open-source release)

shiny-server 1.5.10
--------------------------------------------------------------------------------

(No open-source release)

shiny-server 1.5.9
--------------------------------------------------------------------------------

* Fix bug with listening on port 80.

shiny-server 1.5.8
--------------------------------------------------------------------------------

* Upgrade to Node v8.11.3.

* Added support for listening on IPv6 addresses.

* X-Powered-By response header now reports "Shiny Server" instead of "Express".

* Resolve permissions issues when log directory is on an NFS mount with root
  squash. The `log_as_user` directive was intended to work for these situations,
  but would fail in common configurations. It should now work.

* `log_file_mode` no longer respects the process umask, and the default has been
  changed from `0660` to `0640`.

* Exit code of shiny-server process was always 0, regardless of the reason the
  process exited. Now a non-zero exit code is used if the process was terminated
  by a signal, or an unhandled error crashed the process, or loading of the
  shiny-server.conf config file failed during startup.

shiny-server 1.5.7
--------------------------------------------------------------------------------

* Upgrade to Node v8.10.0.

* Dropped support for Ubuntu 12.04 and SLES 11.

* Support gzip/deflate compression for HTTP responses. You can disable this if
  necessary with the directive "http_allow_compression no;" at the top level
  of shiny-server.conf.

* Don't color log output if stdout is not a terminal.

shiny-server 1.5.6