@@ -26,6 +26,11 @@ var ALL_PROTOCOLS = {
   "jsonp-polling": true
 };
 
+var META_PROTOCOLS = {
+  "streaming": ["xdr-streaming", "iframe-htmlfile", "xhr-streaming", "iframe-eventsource"],
+  "polling": ["jsonp-polling", "xdr-polling", "iframe-xhr-polling", "xhr-polling"]
+};
+
 /** A set of utility helper functions for config routers.
  */
 
@@ -94,13 +99,19 @@ function parseApplication(settings, locNode, provideDefaults){
 
   var disableProtocolsNode = locNode.getOne('disable_protocols', true);
   if (disableProtocolsNode && disableProtocolsNode.values.names) {
-    appSettings.disableProtocols = disableProtocolsNode.values.names;
-    appSettings.disableProtocols.forEach(function(name) {
-      if (!ALL_PROTOCOLS[name]) {
-        throwForNode(disableProtocolsNode,
-          new Error("Unrecognized protocol " + name));
-      }
-    });
+    appSettings.disableProtocols = disableProtocolsNode.values.names.reduce(
+      (accum, name) => {
+        if (ALL_PROTOCOLS[name]) {
+          return accum.concat([name]);
+        } else if (META_PROTOCOLS[name]) {
+          return accum.concat(META_PROTOCOLS[name]);
+        } else {
+          throwForNode(disableProtocolsNode,
+            new Error("Unrecognized protocol " + name));
+        }
+      },
+      []
+    );
   }
   if (locNode.getValues('disable_websockets').val){
     appSettings.disableProtocols.push('websocket');
